<resources>
    <string name="app_name">WhatsMyGoalToday</string>
    <string name="what_day_is_it">What day is it?</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="your_goal_for_the_day">Your Goal For The Day!</string>
    <string name="goal_text">GOAL TEXT</string>
    <string name="back">Back</string>
</resources>
